# neural-net-cpp

./: CMakeLists.txt  README.md  activation_function.cpp  activation_function.h  dataloader.cpp  dataloader.h  except.cpp  except.h  layer.cpp  layer.h  linear_layer.cpp  linear_layer.h  loss_function.cpp  loss_function.h  main.cpp  mnist_loader.cpp  mnist_loader.h  nnet.cpp  nnet.h  softmax.cpp  softmax.h  tests.cpp  tests.h  types.h
data/MNIST/: t10k-images.idx3-ubyte:Zone.Identifier
